--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,7 @@ services:
             - mysql_data:/var/lib/mysql
         environment:
             - MYSQL_DATABASE=project_management
-            - MYSQL_USER=dev
-            - MYSQL_PASSWORD=passwordmysql123
-            - MYSQL_ROOT_PASSWORD=passwordmysql123
+            - MYSQL_ROOT_PASSWORD=
         command: --default-storage-engine innodb
         restart: unless-stopped
         healthcheck:
@@ -30,8 +28,7 @@ services:
             - DB_HOST=sqldb
             - DB_PORT=3306
             - DB_DATABASE=project_management
-            - DB_USERNAME=dev
-            - DB_PASSWORD=passwordmysql
+            - DB_PASSWORD=
             - MAIL_MAILER=smtp
             - MAIL_HOST=mail.binaanugerahsukses.com
             - MAIL_PORT=465
