--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
             - mysql_data:/var/lib/mysql
         environment:
             - MYSQL_DATABASE=project_management
-            - MYSQL_ROOT_PASSWORD=
+            - MYSQL_USER=dev
+            - MYSQL_PASSWORD=passwordmysql123
+            - MYSQL_ROOT_PASSWORD=passwordmysql123
         command: --default-storage-engine innodb
         restart: unless-stopped
         healthcheck:
@@ -28,7 +30,8 @@ services:
             - DB_HOST=sqldb
             - DB_PORT=3306
             - DB_DATABASE=project_management
-            - DB_PASSWORD=
+            - DB_USERNAME=dev
+            - DB_PASSWORD=passwordmysql
             - MAIL_MAILER=smtp
             - MAIL_HOST=mail.binaanugerahsukses.com
             - MAIL_PORT=465
